[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/disco_tile.png" type="Texture" id=1]
[ext_resource path="res://Scenes/3D/DiscoTile.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true

[sub_resource type="BoxShape" id=1]

[node name="DiscoTile" type="Sprite3D"]
transform = Transform( 1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 0, 0 )
material_override = SubResource( 2 )
pixel_size = 0.5
double_sided = false
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.43595, 0, 0, 0, 0.429974, -1.5788e-08, 0, -1.5788e-08, 0.0687864, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CycleDuration" type="Timer" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="CycleDuration" to="." method="_on_CycleDuration_timeout"]
